if not all languages are in the right format, fall back to en-us rather than picking the first one that is in the right format (bug 281107)